# TCC-Vinicius-Kikishiy

./: README.md
tiago_dual_final_thesis-burinyuy/src/: setup.sh
tiago_dual_final_thesis-burinyuy/src/mechatronics_final_thesis/: CMakeLists.txt  package.xml  setup.py
tiago_dual_final_thesis-burinyuy/src/mechatronics_final_thesis/launches/: cylinder_detector.launch  tiago_dual_gazebo_tcc.launch  tiago_dual_mapping_tcc.launch  tiago_dual_navigation_tcc.launch
tiago_dual_final_thesis-burinyuy/src/mechatronics_final_thesis/scripts/: desired_location.py  detect_pose.py  final_thesis_I.py  final_thesis_II.py  go_to_goal.py  gripper.py  move_arms.py  move_arms_to_pose.py  move_head.py  move_head_torso.py  move_straight.py  move_torso.py  navigate_goal.py  navigate_rotate_goal.py  pick_place.py  transformacao_homogenea.py
tiago_dual_final_thesis-burinyuy/src/moveit_python/: CMakeLists.txt  package.xml
tiago_dual_final_thesis-burinyuy/src/moveit_python/scripts/: teste.py
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/: thesis.world
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/launch/: thesis.launch
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/biscuits_pack/: biscuits_pack.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/building/: model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/counter/: model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/cup_blue/: model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/cup_glass/: model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/cup_glass_hex/: model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/pringles/: pringles.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/models/sink/: model.config  model.sdf
tiago_dual_final_thesis-burinyuy/src/pal_gazebo_worlds/worlds/: counter_table.world  dinner_table.world  purchase_table.world  sink.world  thesis.world  thesis_backup.world
tiago_dual_final_thesis-burinyuy/src/tiago_dual_simulation/tiago_dual_2dnav_gazebo/: package.xml
tiago_dual_final_thesis-burinyuy/src/tiago_dual_simulation/tiago_dual_gazebo_tcc/: CMakeLists.txt  package.xml
tiago_dual_final_thesis-burinyuy/src/tiago_dual_simulation/tiago_dual_simulation/: package.xml
(+11 files in other folders)
